[package]
name = "browser"
version = "0.0.1"
authors = [
    "Nate Yazdani <nyazdani@cs.washington.edu>",
    "Yu Feng <yufeng@cs.ucsb.edu>",
    "Pavel Panchekha <me@pavpanchekha.com>",
    "Eric Atkinson <eatkinson@csail.mit.edu>",
    "Ras Bodik <bodik@cs.washington.edu>",
    "Matt Brubeck <mbrubeck@limpet.net>"
]
edition = "2018"

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
getopts = "0.2.19"
itertools = "0.8"
image = "0.22"
#app_units = "0.7"
